--- a/page/_includes/nav.html
+++ b/page/_includes/nav.html
@@ -1,1 +1,4 @@
 {% include _includes/nav.html %}
+<li><a href="{{ site.baseurl }}/">Home</a></li>
+<li><a href="{{ page.permalink }}">{{ page.title }}</a></li>
+<li><a href="{{ page.permalink }}">{{ page.title }}</a></li>
