--- a/page/_includes/nav.html
+++ b/page/_includes/nav.html
@@ -1,4 +1,4 @@
 {% include _includes/nav.html %}
-<li><a href="{{ site.baseurl }}/">Home</a></li>
-<li><a href="{{ page.permalink }}">{{ page.title }}</a></li>
-<li><a href="{{ page.permalink }}">{{ page.title }}</a></li>
+<li><a href="https://bnk3r-boy.github.io/ReadyxChalloBingBong/">Home</a></li>
+<li><a href="https://bnk3r-boy.github.io/ReadyxChalloBingBong/terms_of_service/">Terms of Service</a></li>
+<li><a href="https://bnk3r-boy.github.io/ReadyxChalloBingBong/privacy_policy/">Privacy Policy</a></li>
