--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -39,12 +39,17 @@
 
     <div class="wrapper">
       <nav>
+		<ul><b>Navigation:</b></ul>
 	    <ul>
 		  {% for link in site.data.navigation %}
 		    <li><a href="{{ link.link }}">{{ link.name }}</a></li>
 		  {% endfor %}
 	    </ul>
 	  </nav>
+      <section>
+        {{ content }}
+
+      </section>
       <footer>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
