--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -39,12 +39,11 @@
 
     <div class="wrapper">
       <nav>
-		<ul><b>Navigation:</b></ul>
-	    <ul>
+		<b>Navigation:</b>
+	    <ul></ul>
 		  {% for link in site.data.navigation %}
 		    <li><a href="{{ link.link }}">{{ link.name }}</a></li>
 		  {% endfor %}
-	    </ul>
 	  </nav>
       <section>
         {{ content }}
