--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -40,7 +40,7 @@
     <div class="wrapper">
       <nav>
 	    <ul></ul>
-		<ul>
+		<ul class="no-nav">
 		  {% for link in site.data.navigation %}
 		    <li><a href="{{ link.link }}">{{ link.name }}</a></li>
 		  {% endfor %}
