--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity="sha256-3Jy/GbSLrg0o9y5Z5n1uw0qxZECH7C6OQpVBgNFYa0g=" crossorigin="anonymous"></script>
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
     {% include head-custom.html %}
   </head>
@@ -38,10 +38,6 @@
       </div><!-- end banner -->
 
     <div class="wrapper">
-      <section>
-        {{ content }}
-
-      </section>
       <nav>
 	    <ul>
 		  {% for link in site.data.navigation %}
@@ -49,6 +45,10 @@
 		  {% endfor %}
 	    </ul>
 	  </nav>
+      <section>
+        {{ content }}
+
+      </section>
       <footer>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
