--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -40,6 +40,7 @@
     <div class="wrapper">
       <nav>
 	    <ul>
+			<li></li>
 		  {% for link in site.data.navigation %}
 		    <li><a href="{{ link.link }}">{{ link.name }}</a></li>
 		  {% endfor %}
@@ -50,6 +51,10 @@
 
       </section>
       <footer>
+		<ul>
+          <li><a href="./terms_of_service">Terms of service</a></li>
+          <li><a href="./privacy_policy">Privacy Policy</a></li>
+		</ul>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
