--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -52,8 +52,9 @@
       </section>
       <footer>
 		<ul>
-          <li><a href="./terms_of_service">Terms of service</a></li>
-          <li><a href="./privacy_policy">Privacy Policy</a></li>
+          <li class="tag-h3"><a href="./terms_of_service">Terms of service</a></li>
+		  <li><li>
+          <li class="tag-h3"><a href="./privacy_policy">Privacy Policy</a></li>
 		</ul>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
