--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -51,11 +51,13 @@
 
       </section>
       <footer>
-		<ul>
-          <li class="tag-h3"><a href="./terms_of_service">Terms of service</a></li>
-		  <li><li>
-          <li class="tag-h3"><a href="./privacy_policy">Privacy Policy</a></li>
-		</ul>
+		<nav>
+			<ul>
+			  <li class="tag-h3"><a href="./terms_of_service">Terms of service</a></li>
+			  <li><li>
+			  <li class="tag-h3"><a href="./privacy_policy">Privacy Policy</a></li>
+			</ul>
+		</nav>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
