--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -6,6 +6,7 @@
 
 {% seo %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="_data/style.css">
     <script src="https://code.jquery.com/jquery-3.3.0.min.js" integrity="sha256-RTQy8VOmNlT6b2PIRur37p6JEBZUE7o8wPgMvu18MC4=" crossorigin="anonymous"></script>
     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
     <!--[if lt IE 9]>
@@ -53,9 +54,9 @@
       <footer>
 		<nav>
 			<ul>
-			  <li class="tag-h3"><a href="./terms_of_service">Terms of service</a></li>
+			  <li><a href="./terms_of_service">Terms of service</a></li>
 			  <li><li>
-			  <li class="tag-h3"><a href="./privacy_policy">Privacy Policy</a></li>
+			  <li><a href="./privacy_policy">Privacy Policy</a></li>
 			</ul>
 		</nav>
         {% if site.github.is_project_page %}
