--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -52,7 +52,7 @@
 
       </section>
       <footer>
-		<nav>
+		<nav class="nav2">
 			<ul>
 			  <li><a href="./terms_of_service">Terms of service</a></li>
 			  <li><li>
