--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -52,13 +52,11 @@
 
       </section>
       <footer>
-		<nav class="nav2">
-			<ul>
-			  <li><a href="./terms_of_service">Terms of service</a></li>
-			  <li><li>
-			  <li><a href="./privacy_policy">Privacy Policy</a></li>
-			</ul>
-		</nav>
+		<ul class="nav2">
+		  <li><a href="./terms_of_service">Terms of service</a></li>
+		  <li><li>
+		  <li><a href="./privacy_policy">Privacy Policy</a></li>
+		</ul>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
