--- a/page/assets/css/style.scss
+++ b/page/assets/css/style.scss
@@ -3,14 +3,10 @@
 
 @import "{{ site.theme }}";
 
-ul.nav2 {
-	    -webkit-text-size-adjust: 100%;
-    font: 14px/22px 'Quattrocento Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
-    list-style: none;
-    list-style-image: none;
-    font-size: 14px;
-    line-height: 16px;
-    font-weight: 400;
-    text-decoration: none;
-    color: #666;
-}
+navbot ul{list-style:none;list-style-image:none;font-size:14px;line-height:24px}
+navbot ul li{padding:5px 0px;line-height:16px}
+navbot ul li.tag-h1{font-size:1.2em}
+navbot ul li.tag-h1 a{font-weight:bold;color:#333}
+navbot ul li.tag-h2+.tag-h1{margin-top:10px}
+navbot ul a{color:#666}
+navbot ul a:hover{color:#999}
