--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -54,6 +54,7 @@
       <footer>
 	  <navbot>
 		<ul>
+		  <li><a href="./ChalloBingBong">ChalloBingBong</a></li>
 		  <li><a href="./terms_of_service">Terms of service</a></li>
 		  <li><a href="./privacy_policy">Privacy Policy</a></li>
 		</ul>
