--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -51,6 +51,9 @@
         {{ content }}
 
       </section>
+	</div>
+    <div class="wrapper">
+      <footer>
 	  <navbot>
 		<ul>
 		  <li></li>
@@ -59,7 +62,6 @@
 		  <li><a href="./privacy_policy">Privacy Policy</a></li>
 		</ul>
 	  </navbot>
-      <footer>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
