--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -53,14 +53,14 @@
       </section>
 	</div>
     <div class="wrapper">
-	  <navbot>
+	  <mainnav>
 		<ul>
 		  <li></li>
 		  <li><a href="./">ChalloBingBong</a></li>
 		  <li><a href="./terms_of_service">Terms of service</a></li>
 		  <li><a href="./privacy_policy">Privacy Policy</a></li>
 		</ul>
-	  </navbot>
+	  </mainnav>
       <footer>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
