--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -55,12 +55,14 @@
     <div class="wrapper">
       <footer>
 	  <mainnav>
+		<div>
 		<ul>
 		  <li></li>
 		  <li><a href="./">ChalloBingBong</a></li>
 		  <li><a href="./terms_of_service">Terms of service</a></li>
 		  <li><a href="./privacy_policy">Privacy Policy</a></li>
 		</ul>
+		</div>
 	  </mainnav>
         {% if site.github.is_project_page %}
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
