--- a/page/assets/css/style.scss
+++ b/page/assets/css/style.scss
@@ -3,10 +3,11 @@
 
 @import "{{ site.theme }}";
 
-mainnav ul{list-style:none;list-style-image:none;font-size:14px;line-height:24px;display:block;}
-mainnav ul li{padding:5px 0px;line-height:16px}
-mainnav ul li.tag-h1{font-size:1.2em}
-mainnav ul li.tag-h1 a{font-weight:bold;color:#333}
-mainnav ul li.tag-h2+.tag-h1{margin-top:10px}
-mainnav ul a{color:#666}
-mainnav ul a:hover{color:#999}
+mainnav div{display:block;}
+mainnav div ul{list-style:none;list-style-image:none;font-size:14px;line-height:24px;}
+mainnav div ul li{padding:5px 0px;line-height:16px}
+mainnav div ul li.tag-h1{font-size:1.2em}
+mainnav div ul li.tag-h1 a{font-weight:bold;color:#333}
+mainnav div ul li.tag-h2+.tag-h1{margin-top:10px}
+mainnav div ul a{color:#666}
+mainnav div ul a:hover{color:#999}
