--- a/page/assets/css/style.scss
+++ b/page/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import "{{ site.theme }}";
 
-mainnav div{display:block;}
+mainnav div{display:block !important;}
 mainnav div ul{list-style:none;list-style-image:none;font-size:14px;line-height:24px;}
 mainnav div ul li{padding:5px 0px;line-height:16px}
 mainnav div ul li.tag-h1{font-size:1.2em}
