--- a/page/_layouts/default.html
+++ b/page/_layouts/default.html
@@ -40,12 +40,14 @@
 
     <div class="wrapper">
       <nav>
+		<div>
 	    <ul>
 			<li></li>
 		  {% for link in site.data.navigation %}
 		    <li><a href="{{ link.link }}">{{ link.name }}</a></li>
 		  {% endfor %}
 	    </ul>
+		</div>
 	  </nav>
       <section>
         {{ content }}
