--- a/page/assets/css/style.scss
+++ b/page/assets/css/style.scss
@@ -8,5 +8,5 @@ mainnav div ul li{padding:5px 0px;line-height:16px}
 mainnav div ul li.tag-h1{font-size:1.2em}
 mainnav div ul li.tag-h1 a{font-weight:bold;color:#333}
 mainnav div ul li.tag-h2+.tag-h1{margin-top:10px}
-mainnav div ul a{color:#666}
+mainnav div ul a{display: inline !important;color:#666}
 mainnav div ul a:hover{color:#999}
