--- a/page/assets/css/style.scss
+++ b/page/assets/css/style.scss
@@ -3,6 +3,7 @@
 
 @import "{{ site.theme }}";
 
+mainnav{display:block}
 mainnav div ul{list-style:none;list-style-image:none;font-size:14px;line-height:24px;}
 mainnav div ul li{padding:5px 0px;line-height:16px}
 mainnav div ul li.tag-h1{font-size:1.2em}
@@ -10,3 +11,30 @@ mainnav div ul li.tag-h1 a{font-weight:bold;color:#333}
 mainnav div ul li.tag-h2+.tag-h1{margin-top:10px}
 mainnav div ul a{color:#666}
 mainnav div ul a:hover{color:#999}
+
+
+
+mainnav{
+width:230px;top:220px;left:50%;margin-left:-580px;text-align:right
+}
+mainnav div ul{
+list-style:none;list-style-image:none;font-size:14px;line-height:24px
+}
+mainnav div ul li{
+padding:5px 0px;line-height:16px
+}
+mainnav div ul li.tag-h1{
+font-size:1.2em
+}
+mainnav div ul li.tag-h1 a{
+font-weight:bold;color:#333
+}
+mainnav div ul li.tag-h2+.tag-h1{
+margin-top:10px
+}
+mainnav div ul a{
+color:#666
+}
+mainnav div ul a:hover{
+color:#999
+}
