--- a/page/assets/css/style.scss
+++ b/page/assets/css/style.scss
@@ -15,7 +15,7 @@ mainnav div ul a:hover{color:#999}
 
 
 mainnav{
-width:230px;left:50%;margin-left:-580px;text-align:right
+width:230px;top:220px;left:50%;text-align:right
 }
 mainnav div ul{
 list-style:none;list-style-image:none;font-size:14px;line-height:24px
