--- a/page/assets/css/style.scss
+++ b/page/assets/css/style.scss
@@ -1,6 +1,7 @@
 ---
 ---
 
-@import 'jekyll-theme-leap-day';
+/* @import 'jekyll-theme-leap-day'; */
+
 
 nav{width:330px !important;margin-left:-680px !important;}
